<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">tanze2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_do_you_know_the">Do you know
the trees that
grow in Kenya?</string>
<string name="lbl_show_the_world">Show the world!</string>
<string name="lbl_group_activity">Group Activity</string>
<string name="msg_kiambu_kid_s_in">Kiambu Kid\u2019s Initiative</string>
<string name="msg_confirm_passwor">Confirm Password</string>
<string name="msg_jambo_hello_w">Jambo, Hello.
Welcome  to 
Storytelling
Tree!</string>
<string name="lbl_join_in">Join in</string>
<string name="lbl_your_story">Your Story!</string>
<string name="lbl_burundi">Burundi</string>
<string name="lbl_phone_number">Phone Number</string>
<string name="lbl_tanze">Tanze</string>
<string name="lbl_kimmie_njeri">Kimmie Njeri</string>
<string name="lbl_ark_2">ARK 2</string>
<string name="lbl_faith">Faith</string>
<string name="lbl_user_profile">User Profile</string>
<string name="msg_add_photos_of_t">Add Photos of the tree here</string>
<string name="lbl_hello">Hello</string>
<string name="msg_activities_for">Activities For You</string>
<string name="lbl_back_to_quiz">Back to Quiz</string>
<string name="lbl_rwanda">Rwanda</string>
<string name="lbl_your_name_here">Your Name Here</string>
<string name="msg_you_re_at_10_po">You\u2019re at 10 Points</string>
<string name="lbl_search_name">Search Name</string>
<string name="msg_can_you_guess_w">Can you guess which
tree this is?</string>
<string name="msg_learn_more_on_t">Learn more on this tree</string>
<string name="lbl_indegeous_tree">Indegeous Tree</string>
<string name="lbl_jambo">Jambo</string>
<string name="msg_create_a_challe">Create a challenge</string>
<string name="lbl_little_jeremy">Little Jeremy</string>
<string name="msg_choose_an_avata">Choose an Avatar</string>
<string name="msg_from_this_narra2">From this narrative, we get to understand why Pine trees are
important to the environment. 
Guess what, you can contribute by discovering this tree in your area and telling us </string>
<string name="msg_you_earned_a_mo">You earned a more points!</string>
<string name="msg_record_a_video">Record a video or upload a picture of you planting a tree in your area or home</string>
<string name="lbl_try_again">Try Again</string>
<string name="lbl_activity">Activity</string>
<string name="lbl_create_password">Create Password</string>
<string name="msg_you_earned_a_ne">You earned a new badge</string>
<string name="lbl_gracey_grace">Gracey Grace</string>
<string name="msg_know_trees_in_k">Know Trees in Kenya
Trivia</string>
<string name="msg_you_re_at_0_poi">You\u2019re at 0 Points</string>
<string name="lbl_tanzania">Tanzania</string>
<string name="msg_learn_about_in">Learn about 
Indigenous Trees.</string>
<string name="msg_c_a_eucalyptus">C.
A Eucalyptus
Tree</string>
<string name="lbl_log_in_here">Log in Here</string>
<string name="lbl_add_friends">Add Friends</string>
<string name="lbl_ethiopia">Ethiopia</string>
<string name="msg_challenges_for">Challenges for you!</string>
<string name="lbl_victor_odhiambo">Victor Odhiambo</string>
<string name="lbl_beginner_badge">Beginner Badge</string>
<string name="msg_where_are_you_f">Where are you
from?</string>
<string name="lbl_fun_facts">Fun Facts</string>
<string name="lbl_current_points">Current Points</string>
<string name="msg_on_a_mission_to">On a mission to plant 1000 Trees in Kiambu County </string>
<string name="msg_done_this_befor2">Done this before? </string>
<string name="lbl_the_eucalyptus">The Eucalyptus</string>
<string name="lbl_10_points">+ 10 Points</string>
<string name="lbl_18_points">18 Points</string>
<string name="lbl_17_points">17 Points</string>
<string name="lbl_bonjour">Bonjour</string>
<string name="lbl_11_points">11 Points</string>
<string name="lbl_12_points">12 Points</string>
<string name="lbl_15_points">15 Points</string>
<string name="lbl_south_africa">South Africa</string>
<string name="msg_select_your_cou2">Select Your County</string>
<string name="lbl_ready_set_go">Ready, Set, Go!</string>
<string name="msg_is_this_tree_fo">Is this tree found
in your area?</string>
<string name="msg_adam_and_4_more">Adam and 4 more were invited</string>
<string name="msg_its_a_eucalyptu">Its a Eucalyptus</string>
<string name="lbl_10_points2">10 Points!</string>
<string name="lbl_challenges">Challenges</string>
<string name="msg_why_is_this_tre">Why Is this Tree 
Important?</string>
<string name="lbl_10">10</string>
<string name="lbl_adam">Adam</string>
<string name="lbl_yaaay">Yaaay!</string>
<string name="lbl_geofferry">Geofferry</string>
<string name="lbl_name">Name</string>
<string name="lbl_a_a_mango_tree">A.
A Mango
tree</string>
<string name="lbl_proceed">proceed</string>
<string name="lbl_activities">Activities</string>
<string name="lbl_uganda">Uganda</string>
<string name="lbl_save">Save</string>
<string name="msg_they_are_evergr">They are evergreen, coniferous resinous trees (or, rarely, shrubs) growing 3\u201380 metres (10\u2013260 feet) tall, with the majority of species reaching 15\u201345 m (50\u2013150 ft) tall. The smallest are Siberian dwarf pine and Potosi pinyon, and the tallest is an 81.8 m (268 ft) tall.</string>
<string name="msg_congratulations">Congratulations!</string>
<string name="lbl_practice">Practice</string>
<string name="lbl_done">Done!</string>
<string name="lbl_invite">invite</string>
<string name="msg_a_short_narrati">A short Narrative On Eucalyptus Trees</string>
<string name="msg_a_climate_chan">A Climate -change gamified learning experience for kids</string>
<string name="lbl_danson">Danson</string>
<string name="msg_just_a_little_b">Just a little
bit more about 
you and that\u2019s it.</string>
<string name="msg_select_your_pre">Select Your Preferred Language</string>
<string name="lbl_get_some_hints">Get some Hints</string>
<string name="lbl_20_points">20 Points</string>
<string name="msg_you_created_thi">You created this Group Activity by
inviting your friends. </string>
<string name="msg_show_your_tree">Show your tree planting
to the world!</string>
<string name="msg_select_your_cou">Select Your Country</string>
<string name="msg_done_this_befor">Done this before? Log in Here</string>
<string name="msg_select_your_reg">Select Your Region</string>
<string name="msg_b_a_banana_tre">B.
A Banana
Tree</string>
<string name="msg_0_friends_invit">0 Friends Invited You</string>
<string name="msg_from_this_narra">From this narrative, we get to understand why Pine trees are
important to the environment. 
Guess what, you can contribute by discovering this tree in your area and telling us Your Story!</string>
<string name="lbl_catherine">Catherine</string>
<string name="msg_how_do_you_nurt">How do you nurture this tree?</string>
<string name="lbl_d_a_pine_tree">D.
A Pine
Tree</string>
<string name="lbl_kenya">Kenya</string>
<string name="lbl_nigeria">Nigeria</string>
<string name="msg_oh_no_you_can">Oh no.. You
can try again</string>
<string name="lbl_janey_patel">Janey Patel</string>
<string name="lbl_esther">Esther</string>
<string name="lbl_sudan">Sudan</string>
<string name="lbl_beatrice">Beatrice</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
</resources>
