<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="selectLanguageVM" type="com.tanze.app.modules.selectlanguage.data.viewmodel.SelectLanguageVM"/>
    </data>
    <LinearLayout android:id="@+id/linearSelectLanguage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/frameStacklanguage"
            android:layout_gravity="end"
            android:layout_height="@dimen/_348pxv"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_55pxv" android:layout_width="@dimen/_359pxh">
            <TextView android:gravity="top|start"
                android:id="@+id/txtLanguage"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_66pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_marginTop="@dimen/_66pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:text="@{selectLanguageVM.selectLanguageModel.txtLanguage}"
                style="@style/txtPoppinsextrabold30" tools:text="@string/msg_jambo_hello_w"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtSelectYourPre"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:singleLine="true"
                android:text="@{selectLanguageVM.selectLanguageModel.txtSelectYourPre}"
                style="@style/txtPoppinsmedium20" tools:text="@string/msg_select_your_pre"/>
            <ImageView android:id="@+id/imageBlackinBasicEight"
                android:layout_gravity="bottom|end"
                android:layout_height="@dimen/_326pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="@dimen/_167pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_blackinbasic8}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_blackinbasic8"/>
            <ImageButton
                android:background="@drawable/rectangle_bg_lime_900_radius_24_5"
                android:id="@+id/btnBackButton"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_49pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="@dimen/_49pxh"
                android:paddingHorizontal="@dimen/_8pxh"
                android:paddingVertical="@dimen/_8pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_backbutton" tools:ignore="ContentDescription"/>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnHello"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_15pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_hello" android:textAllCaps="false"
            style="@style/btnSolidRounded_2" tools:text="@string/lbl_hello"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnJambo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_15pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_jambo" android:textAllCaps="false"
            style="@style/btnSolidRounded_2" tools:text="@string/lbl_jambo"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnBonjour"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_15pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_bonjour"
            android:textAllCaps="false" style="@style/btnSolidRounded_2" tools:text="@string/lbl_bonjour"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnProceed"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_44pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="@dimen/_187pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@string/lbl_proceed"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_proceed"/>
    </LinearLayout>
</layout>
