<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpVM" type="com.tanze.app.modules.signup.data.viewmodel.SignUpVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearSignUp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/frameStackjustalittleb"
            android:layout_gravity="end"
            android:layout_height="@dimen/_348pxv"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_55pxv" android:layout_width="@dimen/_374pxh">
            <TextView android:gravity="top|start"
                android:id="@+id/txtJustalittleb"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_104pxv"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_104pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:text="@{signUpVM.signUpModel.txtJustalittleb}"
                style="@style/txtPoppinsextrabold30" tools:text="@string/msg_just_a_little_b"/>
            <ImageView android:id="@+id/imageBlackinBasicEight"
                android:layout_gravity="bottom|end"
                android:layout_height="@dimen/_326pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="@dimen/_167pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_blackinbasic8_326x167}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_blackinbasic8_326x167"/>
            <EditText
                android:background="@drawable/rectangle_bg_orange_53_radius_25"
                android:ellipsize="end" android:hint="@string/lbl_name"
                android:id="@+id/etGroupTwentyNine"
                android:inputType="text"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_10pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@={signUpVM.signUpModel.etGroupTwentyNineValue}"
                android:textColorHint="@color/gray_500"
                style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
            <ImageButton
                android:background="@drawable/rectangle_bg_lime_900_radius_24_5"
                android:id="@+id/btnBackButton"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_49pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_width="@dimen/_49pxh"
                android:paddingHorizontal="@dimen/_8pxh"
                android:paddingVertical="@dimen/_8pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_backbutton" tools:ignore="ContentDescription"/>
        </FrameLayout>
        <EditText
            android:background="@drawable/rectangle_bg_orange_53_radius_25"
            android:ellipsize="end"
            android:hint="@string/lbl_phone_number"
            android:id="@+id/etGroupTwentyEight"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_10pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@={signUpVM.signUpModel.etGroupTwentyEightValue}"
            android:textColorHint="@color/gray_500"
            style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_orange_53_radius_25"
            android:ellipsize="end"
            android:hint="@string/lbl_create_password"
            android:id="@+id/etGroupTwentySeven"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_10pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@={signUpVM.signUpModel.etGroupTwentySevenValue}"
            android:textColorHint="@color/gray_500"
            style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_orange_53_radius_25"
            android:ellipsize="end"
            android:hint="@string/msg_confirm_passwor"
            android:id="@+id/etGroupTwentySix"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_10pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@={signUpVM.signUpModel.etGroupTwentySixValue}"
            android:textColorHint="@color/gray_500"
            style="@style/etSolidRounded_2" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnDone"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_44pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="@dimen/_162pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@string/lbl_done" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_done"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtDonethisbefor"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_10pxh"
            android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtDonethisbefor}"
            style="@style/txtPoppinsregular20_1" tools:text="@string/msg_done_this_befor"/>
    </LinearLayout>
</layout>
